WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89202
Web Inspector: CRASH: getProfile is crashing for unknown profiles.
https://bugs.webkit.org/show_bug.cgi?id=89202
Summary
Web Inspector: CRASH: getProfile is crashing for unknown profiles.
Ilya Tikhonovsky
Reported
2012-06-15 06:32:55 PDT
EOM
Attachments
Patch
(5.37 KB, patch)
2012-06-15 06:37 PDT
,
Ilya Tikhonovsky
pfeldman
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ilya Tikhonovsky
Comment 1
2012-06-15 06:37:08 PDT
Created
attachment 147800
[details]
Patch
Ilya Tikhonovsky
Comment 2
2012-06-15 07:28:40 PDT
Committed
r120456
: <
http://trac.webkit.org/changeset/120456
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug