Web Inspector: CRASH: getProfile is crashing for unknown profiles. https://bugs.webkit.org/show_bug.cgi?id=89202

Source/WebCore:

agents' functions have to set a value to errorString if it can't assign values to the mandatory out arguments.

Reviewed by Pavel Feldman.

Test: inspector/profiler/heap-snapshot-get-profile-crash.html

* inspector/InspectorProfilerAgent.cpp:
(WebCore::InspectorProfilerAgent::getProfile):

LayoutTests:

Reviewed by Pavel Feldman.

* inspector/profiler/heap-snapshot-get-profile-crash-expected.txt: Added.
* inspector/profiler/heap-snapshot-get-profile-crash.html: Added.

Canonical link: https://commits.webkit.org/107070@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120456 268f45cc-cd09-0410-ab3c-d52691b4dbfc